Fix maximum height and add overflow auto to plainlist items

--- a/src/Components/PlainList/PlainList.css
+++ b/src/Components/PlainList/PlainList.css
@@ -7,6 +7,8 @@
 
 #plain-list .details {
     padding-left: 1rem;
+    max-height: 13vh;
+    overflow-y: auto;
 }
 
 #plain-list .details .detail-item {
